# operator

./: .gitignore  Cargo.toml  README.md
op_application/: Cargo.toml  build.rs
op_application/engines/: metronome.dsp  noise.dsp  saw.dsp  sine.dsp
op_application/src/: clip_view.rs  engines.rs  faust.rs  faust_engines.rs  keyboard.rs  main.rs  player.rs  timeline_view.rs  virtual_keyboard.rs
op_application/src/view/: mod.rs  timeline.rs  timeline_clip.rs
op_engine/: Cargo.toml
op_engine/src/: clip.rs  clip_database.rs  generator.rs  lib.rs  player.rs  project.rs  session.rs  timeline.rs  track.rs
op_engine/src/generator/: sine.rs
session/: session.json
