[package]
name = "op_application"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
cpal = "0.15.2"
iced = {version = "0.9.0", features = ["smol"]}
midly = "0.5.3"
op_engine = { path = "../op_engine"}
rfd = "0.11.3"
