[package]
name = "op_engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cpal = "0.15.2"
dasp = { version = "0.11.0", features = ["all"] }
hound = "3.5.0"
midly = "0.5.3"
serde = { version = "1.0.159", features = [ "derive" ] }
serde_json = "1.0.95"
thiserror = "1.0.40"
